style: avoid thumbnails growing too big on few search results

--- a/app/components/media-grid/media-grid.css
+++ b/app/components/media-grid/media-grid.css
@@ -2,7 +2,7 @@
   --media-grid-min-width: 125px;
   display: grid;
   grid-template-columns: repeat(
-    auto-fit,
+    auto-fill,
     minmax(var(--media-grid-min-width), 1fr)
   );
   row-gap: var(--space-s-m);
